[package]
name = "config-spirit-fork"
version = "0.1.0"
description = "Layered configuration system for Rust applications."
repository = "https://github.com/vorner/config-rs"
readme = "README.md"
keywords = ["config", "configuration", "settings", "env", "environment"]
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
categories = ["config"]
license = "MIT/Apache-2.0"

[features]
default = ["toml", "json", "yaml", "hjson", "ini"]
json = ["serde_json"]
yaml = ["yaml-rust"]
hjson = ["serde-hjson"]
ini = ["rust-ini"]

[dependencies]
lazy_static = "1.0"
serde = "1.0.8"
nom = "4.0.0"

toml = { version = "0.5", optional = true }
serde_json = { version = "1.0.2", optional = true }
yaml-rust = { version = "0.4", optional = true }
serde-hjson = { version = "0.9", optional = true }
rust-ini = { version = "0.13", optional = true }

[dev-dependencies]
serde_derive = "1.0.8"
float-cmp = "0.4"
chrono = { version = "0.4", features = ["serde"] }
